<?xml version="1.0"?>
<package format="2">
  <name>colored_ball_detector</name>
  <version>0.0.0</version>
  <description>Find a ball of specified color region</description>

  <maintainer email="pedro.tecchio@fbter.org.br">Pedro Tecchio</maintainer>
  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>


  <build_depend>cv_bridge</build_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <exec_depend>cv_bridge</exec_depend>

  <build_depend>image_transport</build_depend>
  <build_export_depend>image_transport</build_export_depend>
  <exec_depend>image_transport</exec_depend>

  <build_depend>sensor_msgs</build_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <build_depend>std_msgs</build_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>std_msgs</exec_depend>

  <build_depend>OpenCV</build_depend>
  <build_export_depend>OpenCV</build_export_depend>
  <exec_depend>OpenCV</exec_depend>


  <!-- <export>

  </export> -->
</package>